2006-05-30  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/Game.cs (.ctor): guard against having
	multiple broodat.mpq/stardat.mpq files in a directory (since we
	have to use ToLower() to do string comparisons, we can end up with
	multiple matches.)

2006-05-30  Chris Toshok  <toshok@hungry.com>

	* src/scsharp.cs (Main): add a test to make sure
	StarcraftCDDirectory and BroodwarCDDirectory have unique values.
	I can't believe anyone would do that and expect it to work, but
	what have you... fixes ticket #2.

2006-05-30  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/Sprite.cs (PaintSprite): the logic for the
	clipping test wasn't taking into account the fact that the x,y of
	a unit changed from top-left to center.  this fixes ticket #3.

2006-05-29  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/TitleScreen.cs (LoadingFlasher): flash the
	"Loading" text on the screen as we load things.  The managed
	stormlib does take a little longer to load things, which is a
	bonus - the title screen actually stays up long enough for this
	string to be shown :)

2006-05-29  Chris Toshok  <toshok@hungry.com>

	* Makefile.am (release): make it a zip file instead of a tar.bz2.

2006-05-29  Chris Toshok  <toshok@hungry.com>

	* Makefile.am (release): fix this target so that it works again.

	* NEWS: include news for the first time.

	* configure.ac: bump to 0.0000008.

	* HACKING: fix up the .smk entry, with various options for
	projects, and remove the managed stormlib project since Foole's is
	working.

	* RELEASE_README: s/starcraft/scsharp

	* src/scsharp.exe.config-example: add the new options.

	* src/scsharp.exe.config: can't put -- in the middle of comments.

2006-05-29  Chris Toshok  <toshok@hungry.com>

	* SCSharp/Makefile.am (MCSFLAGS): define USE_STORM_DLL if
	ENABLE_STORMLIB == true.

	* src/scsharp.exe.config: add some comments about the debugging
	options, and add a new one to enable the unmanaged mpq library.
